--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>6.14.3</version>
         </dependency>
 
+       <dependency>
+           <groupId>com.jayway.jsonpath</groupId>
+           <artifactId>json-path</artifactId>
+           <version>2.4.0</version>
+       </dependency>
 
    </dependencies>
 </project>
