--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,21 @@
             <artifactId>testng</artifactId>
             <version>6.14.3</version>
         </dependency>
-
-
    </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Plugin that is responsible for test execution -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <xmlFile>testng.xml</xmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
