--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
     <artifactId>restassureapi</artifactId>
     <version>1.0.0</version>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
    <!-- Project Depency -->
    <dependencies>
         <dependency>
@@ -19,6 +24,13 @@
             <artifactId>testng</artifactId>
             <version>6.14.3</version>
         </dependency>
+
+       <dependency>
+           <groupId>com.aventstack</groupId>
+           <artifactId>extentreports</artifactId>
+           <version>4.1.7</version>
+       </dependency>
+
    </dependencies>
 
     <build>
