initial complete project image

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
                     <suiteXmlFiles>
                         <xmlFile>testng.xml</xmlFile>
                     </suiteXmlFiles>
+                    <properties>
+                        <property>
+                            <name>testnames</name>
+                            <value>${testof}</value>
+                        </property>
+                    </properties>
                 </configuration>
             </plugin>
         </plugins>
