--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
+
+       <dependency>
+           <groupId>com.github.javafaker</groupId>
+           <artifactId>javafaker</artifactId>
+           <version>1.0.2</version>
+       </dependency>
+
    </dependencies>
 
     <build>
