finished automating 7 TCs from Endpoint Verification tests

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
                     <properties>
                         <property>
                             <name>testnames</name>
-                            <value>${testof}</value>
+                            <value>${testType}</value>
                         </property>
                     </properties>
                 </configuration>
